# setting

./: .gitattributes  .gitignore  CMakeLists.txt  CodeSamples.tgz  LICENSE  README.md  bashrc.conf  basic_emacs.conf  breadcrumb.el  clang-format  copylib.sh  create_ccls.sh  create_cmake.sh  dir-locals.el  emacs  emacs.conf  emacs.d.tgz  emacs_key.conf  eshell_alias  evil-maps.el  jihe.cpp  luacheckrc  mintty_config  ngin_timer.org  nginx.org  nginx_stream.org  other.lisp  pack_prog.sh  profile.org  proj.sh  putty-eclectide.reg  rtags-2.10.tar.bz2  sourcecodepro_ttf.tgz  terminal_bg.sh  xcscope.el  xorg.conf
bmk/: Kat.bmk  disque.bmk  jemalloc.bmk  kernel.bmk  nginx.bmk  redis3.2.bmk  yulongzaitian.bmk
bullet_doc/: 1.md  1.org  bak.md
cellnet_doc/: send_recv.org  server.org
cocos_doc/: 和社区一起做游戏.org
ctags.d/: lua.ctags  opt.ctags  ts.ctags
docker/: default.conf  docker-compose.yml
emacs_conf/: create_cpp_proj.sh  create_cscopefile_tags.sh  create_lua_proj.sh  create_tags_file.sh  emacs  emacs.conf  emacs2  emacs_key.conf  eshell_alias  gocscope.sh  gprof.el  gtags_jump_back.lisp  jump_back.lisp  mode-line.conf  my-c-config.lisp  my-counsel-ag.lisp  my-dired.lisp  my-evil.lisp  my-go-config.lisp  my-ivy-config.lisp  my-lsp-bridge.lisp  my-lsp-conf.lisp  my-lua-lsp.lisp  my-lua.lisp  my-markdown-config.lisp  my-paredit.lisp  my-theme-theme.el  my-theme-true-color-theme.el  my-web-python-config.lisp  my-xref-backpoint.lisp  mycscope.sh  mycscope_dir.sh  other.lisp  package.bak  package.conf  pretty.lua  pushall.sh  shell.conf  show-company-num.conf  (+2 more)
gdbpy/: mv.py
(+131 files in other folders)
